tests/codegen/errors/codegen/arity/atom.codegen.90.diagnostics.arity.rt.codegen.err.tail.arity/rt_codegen_err_tail_arity.mon
;; TEST-ID: tests.codegen.rt-codegen-err-tail-arity
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-CODEGEN-ATOM: atom.codegen.90.diagnostics.arity.rt.codegen.err.tail.arity
;; TEST-QUALITY: branch-regression
;; TEST-SUBSET: arity
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SECTION: codegen
;; TEST-CONTEXT: monadc.context.language.codegen-diagnostics
;; TEST-PURPOSE: Codegen enforces tail arity.
;; TEST-ATOM: (tail) must fail because tail requires one collection argument.
;; TEST-EXPECT: fail:compile

;; TEST-COVERAGE: codegen.c:90-diagnostics/arity branch family
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-MENU: errors/codegen/arity/atom.codegen.90.diagnostics.arity.rt.codegen.err.tail.arity
;; TEST-MENU-PATH: codegen/errors/codegen/arity/atom.codegen.90.diagnostics.arity.rt.codegen.err.tail.arity
;; TEST-ATOM-LEAF: atom.codegen.90.diagnostics.arity.rt.codegen.err.tail.arity
;; TEST-CLI-TARGET: codegen errors codegen arity
(module Main)
(show (tail))
